--- a/Appointments/src/Appointments.Infrastructure/Appointments.Infrastructure.csproj
+++ b/Appointments/src/Appointments.Infrastructure/Appointments.Infrastructure.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
+        <PackageReference Include="OpenTelemetry.Api" Version="1.10.0" />
         <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
         <PackageReference Include="Scrutor" Version="4.2.2" />
     </ItemGroup>
