--- a/Doctors/src/Doctors.Api/appsettings.Development.json
+++ b/Doctors/src/Doctors.Api/appsettings.Development.json
@@ -27,6 +27,8 @@
     "ExchangeName": "IntegrationEvents"
   },
 
+  "OTLP_Endpoint": "http://localhost:4317",
+
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
