Add database services to docker-compose

--- a/Appointments/src/Appointments.Api/appsettings.Development.json
+++ b/Appointments/src/Appointments.Api/appsettings.Development.json
@@ -6,8 +6,9 @@
     }
   },
 
+
   "ConnectionStrings": {
-    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB; database=FindADoctor.Appointments; integrated security=true;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;"
+    "DefaultConnection": "Server=localhost,1435;Database=FindADoctor.Appointments;User Id=sa;Password=EoR_e4463t;TrustServerCertificate=true;"
   },
 
   "JwtSettings": {
