--- a/Doctors/src/Doctors.Api/appsettings.Development.json
+++ b/Doctors/src/Doctors.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB; database=FindADoctor.Doctors; integrated security=true;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;"
+    "DefaultConnection": "Server=localhost,1434;Database=FindADoctor.Doctors;User Id=sa;Password=EoR_e4463t;TrustServerCertificate=true;"
   },
 
   "JwtSettings": {
