--- a/Identity/src/Identity.Api/appsettings.Development.json
+++ b/Identity/src/Identity.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB; database=FindADoctor.Identity; integrated security=true;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;"
+    "DefaultConnection": "Server=localhost,1433;Database=FindADoctor.Identity;User Id=sa;Password=EoR_e4463t;TrustServerCertificate=true;"
   },
 
   "JwtSettings": {
