--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@
 name: .NET
 
 on:
-  push:
+  pull_request:
     branches: [ "main" ]
 
 env:
@@ -21,7 +21,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 9.0.x
     
     - name: Restore dependencies
       run: dotnet restore
