Replace Fluent Assertions with Shouldly
Replace Fluent Assertions with Shouldly

--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -12,7 +12,7 @@ jobs:
     
     name: PR Verify
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v4
