--- a/Appointments/tests/Appointments.Api.IntegrationTests/Appointments.Api.IntegrationTests.csproj
+++ b/Appointments/tests/Appointments.Api.IntegrationTests/Appointments.Api.IntegrationTests.csproj
@@ -13,11 +13,11 @@
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Respawn" Version="6.2.1" />
+        <PackageReference Include="Shouldly" Version="4.2.1" />
         <PackageReference Include="Testcontainers" Version="3.7.0" />
         <PackageReference Include="Testcontainers.MsSql" Version="3.7.0" />
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
-        <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0" />
     </ItemGroup>
 
